--- a/public/css/whackamole.css
+++ b/public/css/whackamole.css
@@ -1,14 +1,14 @@
 .box {
     width: 125px;
     height: 125px;
-    border: 1px solid #ffeb99;
+    /*border: 1px dashed #ffeb99;*/
     padding: 0px;
     border-radius: 300px;
 }
 .square {
     width: 125px;
     height: 125px;
-    background-image: url("/img/theMole.jpeg");
+    background-image: url("/img/smole.jpeg");
     display: none;
     border-radius: 60px
 }
@@ -23,21 +23,59 @@ body {
 .container {
     margin-top: 200px;
 }
-.round {
-    width: 120px;
-    height: 120px;
-    background-color: blue;
+.timer {
+    width: 160px;
+    height: 50px;
+    background-color: #4AA0FE;
+    position: absolute;
+    margin: 60px 0px 0px 0px;
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.timer>p {
+    font-size: 20px;
+    color: #E4CB66;
+    text-shadow: 2px 2px 2px black;
+    margin: 10px;
+}
+.score {
+    width: 160px;
+    height: 50px;
+    background-color: #4AA0FE;
+    position: absolute;
+    margin: 120px 0px 0px 0px;
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.score>p {
+    font-size: 20px;
+    color: #E4CB66;
+    text-shadow: 2px 2px 2px black;
+    margin: 10px;
+
+}
+#start {
+    width: 160px;
+    height: 50px;
+    background-color: #4AA0FE;
     position: absolute;
     margin: 0px 0px 0px 0px;
     border-radius: 20px;
-    border: 1px solid white;
+    border: 1px solid black;
 }
-.score {
-    width: 120px;
-    height: 120px;
-    background-color: blue;
-    position: absolute;
-    margin: 130px 0px 0px 0px;
-    border-radius: 20px;
-    border: 1px solid white;
+#start>p {
+    font-size: 20px;
+    color: #E4CB66;
+    text-shadow: 2px 2px 2px black;
+    margin: 10px;
+}
+#secret_gif {
+    display: none;
+    margin: 0px 0px 0px 250px;
+    height: 350px
+    width: 350px;
+}
+#hidden_title {
+    display: none;
+    margin: 0px 0px 0px 350px;
 }
